--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "howler": "^2.0.8",
     "rxjs": "^5.5.2",
     "tracking": "^1.1.3",
     "zone.js": "^0.8.14"
