--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/howler": "^2.0.5",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "howler": "^2.0.8",
